--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,4 +5,17 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.enterprise.ij.nearish.MapsActivity" />
+    tools:context="com.enterprise.ij.nearish.MapsActivity">
+
+    <Button
+    android:id="@+id/btnRestaurant"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Nearby Restaurants"
+    android:layout_gravity="left|top"
+    android:padding="10dp"
+    android:layout_marginTop="20dp"
+    android:paddingRight="10dp"
+        />
+
+</fragment>
