--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@android:color/black"
-    tools:context="com.enterprise.ij.nearish.SignInActivity">
+    tools:context="com.enterprise.ij.nearish.Activities.SignInActivity">
 
     <!-- Login progress -->
     <ProgressBar
