--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@android:color/black"
-    tools:context="com.enterprise.ij.nearish.SignInActivity">
+    tools:context="com.enterprise.ij.nearish.Activities.SignInActivity">
 
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
