--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.enterprise.ij.nearish.SplashScreen"
+    tools:context="com.enterprise.ij.nearish.Activities.SplashScreen"
     android:background="@android:color/black"
     android:layout_gravity="center"
     android:gravity="center"
