--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,9 @@
         <item name="android:textColor">@color/White</item>/>
     </style>
 
-
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/Gold</item>
+        <item name="colorControlActivated">@color/LightGrey</item>
+    </style>
 
 </resources>
