--- a/app/src/main/res/layout/activity_places_list.xml
+++ b/app/src/main/res/layout/activity_places_list.xml
@@ -7,7 +7,7 @@
     tools:context="com.enterprise.ij.nearish.Fragments.PlacesList">
 
     <ListView
-        android:id="@+id/placesList"
+        android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </ListView>
