--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@android:color/black"
-    tools:context="com.enterprise.ij.nearish.Activities.SignInActivity">
+    tools:context="com.enterprise.ij.nearish.SignInActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -27,6 +27,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:focusableInTouchMode="true"
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -80,7 +81,7 @@
                 android:textColorHint="@android:color/white"
                 >
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -113,6 +114,7 @@
                 android:gravity="center"
                 style="@style/text"
                 android:textSize="16dip"/>
+
 
         </LinearLayout>
 
