--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,9 +11,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@android:color/black"
-    tools:context="com.enterprise.ij.nearish.Activities.SignInActivity">
+    tools:context="com.enterprise.ij.nearish.SignInActivity">
+
+    <!-- Login progress -->
+    <ProgressBar
+        android:id="@+id/signup_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
 
     <ScrollView
+        android:id="@+id/signup_form"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -54,7 +64,7 @@
                 android:layout_marginBottom="8dp"
                 android:textColorHint="@android:color/white"
                 >
-                <EditText android:id="@+id/input_email"
+                <AutoCompleteTextView android:id="@+id/input_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
@@ -70,7 +80,8 @@
                 android:layout_marginBottom="8dp"
                 android:textColorHint="@android:color/white"
                 >
-                <EditText android:id="@+id/input_password"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -86,7 +97,8 @@
                 android:layout_marginBottom="8dp"
                 android:textColorHint="@android:color/white"
                 >
-                <EditText android:id="@+id/input_reEnterPassword"
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/input_reEnterPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
