--- a/app/src/main/res/layout/likable_place_item.xml
+++ b/app/src/main/res/layout/likable_place_item.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
 
         <ImageView
             android:id="@+id/likablePlaceImage"
@@ -12,5 +10,12 @@
             android:layout_marginBottom="10dp"
             android:layout_marginRight="5dp" />
 
+        <TextView
+            android:id="@+id/placeName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/Black"/>
 
-</LinearLayout>
+
+</RelativeLayout>
