--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -1,15 +1,38 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical" android:layout_width="match_parent"
 android:layout_height="match_parent">
 
 <ImageView
     android:id="@+id/categoryImage"
-    android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_width="14dp"
+    android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
-    android:layout_marginBottom="10dp"
-    android:scaleType="fitXY"
+    android:layout_toLeftOf="@+id/categoryName"
+    android:layout_centerVertical="true"
     />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/categoryName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:textColor="@color/Black"/>
+
+    <ToggleButton
+        android:id="@+id/favButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/check"
+        android:textOff=""
+        android:textOn=""
+        android:layout_toLeftOf="@id/categoryName"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="10dp" >
+
+    </ToggleButton>
+
+</RelativeLayout>
