--- a/app/src/main/res/layout/activity_categories_list.xml
+++ b/app/src/main/res/layout/activity_categories_list.xml
@@ -14,7 +14,7 @@
     </ListView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
